--- a/src/scss/portfolio/_front.scss
+++ b/src/scss/portfolio/_front.scss
@@ -6,7 +6,7 @@
   // overflow-x: hidden;
   .me {
     position:absolute;
-    font-family: "Slabo 27px";
+    font-family: "Red Hat Display";
     max-width:100vw;
     margin-top:10vh;
     cursor: pointer;
