Style Consistency Fix

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -324,22 +324,22 @@
           <div class="img-container">
             <div data-aos="zoom-in-left"  class="proj-card stocklists-img" >
               <div class="proj-content" >
-                  <p class="proj-title">Stock Snapshots</p>
+                  <p class="proj-title">Stocks.js</p>
                   <p class="proj-blurb">Current stock prices. List by Industry. Create custom lists.</p>
                   <button onclick="location.href='/stocklists'" class="proj-btn" type="button" name="button" >View App</button>
                   <button onclick="location.href='https://github.com/MarkTriesCoding/StockListApp/'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
             </div>
             <div data-aos="zoom-in-left" class="proj-card drums-img" data-href="/drums">
-              <div class="proj-content " >  <p class="proj-title">Keyboard Drum App</p>
-                <p class="proj-blurb">Play around with drum sounds with oyour keyboard or mouse</p>
+              <div class="proj-content " >  <p class="proj-title">Drums.js</p>
+                <p class="proj-blurb">Play around with drum sounds.</p>
                 <button onclick="location.href='/drums'" class="proj-btn" type="button" name="button">View App</button>
                 <button onclick="location.href='https://www.github.com/marktriescoding/KeyboardDrums'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
             </div>
             <div data-aos="zoom-in-left" class="proj-card markdown-img" data-href="/markdown">
-              <div class="proj-content ">  <p class="proj-title">Markdown Tester</p>
-                <p class="proj-blurb">Markdown Language Testing app. Write in markdown and preview live.</p>
+              <div class="proj-content ">  <p class="proj-title">Live Markdown Previewer.js</p>
+                <p class="proj-blurb">Live Markdown Language Testing app. Write in markdown and preview live.</p>
                 <button onclick="location.href='/markdown'" class="proj-btn" type="button" name="button">View App</button>
                 <button onclick="location.href='https://www.github.com/marktriescoding/Markdown'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
@@ -356,8 +356,8 @@
 
           <div data-aos="zoom-in-left" class="proj-card d3-img" data-href="/d3">
             <div class="proj-content" >
-                <p class="proj-title">D3.js Data Visualisations</p>
-                <p class="proj-blurb">Interactive Heatmap, Choropleth, and Scatterplots with D3.js.</p>
+                <p class="proj-title">D3.js Data Vis</p>
+                <p class="proj-blurb">Interactive Heatmap, Choropleth, and Scatterplots with D3.js. Glide effect carousel</p>
                 <button onclick="location.href='/d3'" class="proj-btn" type="button" name="button">View App</button>
                 <button onclick="location.href='https://www.github.com/marktriescoding/D3-Examples'" class="proj-btn" type="button" name="button">View Source</button>
             </div>
@@ -371,8 +371,8 @@
 
                <div data-aos="zoom-in-left" class="proj-card snake-img" data-href="/snake">
                  <div class="proj-content" >
-                     <p class="proj-title">SNEK</p>
-                     <p class="proj-blurb">Snake game made with javascript. Using grid and modules.</p>
+                     <p class="proj-title">SNEK.js</p>
+                     <p class="proj-blurb">Snake game made with javascript. Using grid and requestAnimationFrame. <br/> Passport Login and Leaderboard using MongoDB</p>
                      <button onclick="location.href='/snake'" class="proj-btn" type="button" name="button">View App</button>
                      <button onclick="location.href=''" class="proj-btn" type="button" name="button">View Source</button>
                  </div>
@@ -388,36 +388,36 @@
 
             <div data-aos="zoom-in-left" class="proj-card calculator-img" data-href="/calculator">
               <div class="proj-content" >
-                  <p class="proj-title">Calculator App</p>
-                  <p class="proj-blurb">Simple calculator for the web. Keyboard or mouse.</p>
+                  <p class="proj-title">Calculator.js</p>
+                  <p class="proj-blurb">Calculator app. Keyboard or mouse.</p>
                   <button onclick="location.href='/calculator'" class="proj-btn" type="button" name="button">View App</button>
                   <button onclick="location.href='https://www.github.com/marktriescoding/Calculator'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
             </div>
             <div data-aos="zoom-in-left" class="proj-card simon-img" data-href="/simon">
               <div class="proj-content" >
-                  <p class="proj-title">Simon Memory Game</p>
-                  <p class="proj-blurb">Simon game with optional strict mode.</p>
-                  <button onclick="location.href='/simon'" class="proj-btn" type="button" name="button">View App</button>
+                  <p class="proj-title">Simon.js</p>
+                  <p class="proj-blurb">Simon memory game. Optional strict mode.</p>
+                  <button onclick="location.href='/simon'" class="proj-btn waves-effect" type="button" name="button">View App</button>
                   <button onclick="location.href='https://www.github.com/marktriescoding/SimonGame'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
             </div>
             <div data-aos="zoom-in-left" class="proj-card tictactoe-img" data-href="/tictactoe">
               <div class="proj-content" >
-                  <p class="proj-title">Tic-Tac-Toe Game</p>
-                  <p class="proj-blurb">Simple Tic-Tac-Toe game made with jQuery.</p>
+                  <p class="proj-title">Tic-Tac-Toe.js</p>
+                  <p class="proj-blurb">Unbeatable Tic-Tac-Toe game made with jQuery.</p>
                   <button onclick="location.href='/tictactoe'" class="proj-btn" type="button" name="button">View App</button>
                   <button onclick="location.href='https://www.github.com/marktriescoding/TicTacToe'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
             </div>
-            <div data-aos="zoom-in-left" class="proj-card timer-img" data-href="/timer">
+            <!-- <div data-aos="zoom-in-left" class="proj-card timer-img" data-href="/timer">
               <div class="proj-content" >
                   <p class="proj-title">Pomodoro Timer</p>
                   <p class="proj-blurb">Easy to use app for productivity.</p>
                   <button onclick="location.href='/timer'" class="proj-btn" type="button" name="button">View App</button>
                   <button onclick="location.href='https://www.github.com/marktriescoding/PomodoroTimer'" class="proj-btn" type="button" name="button">View Source</button>
               </div>
-            </div>
+            </div> -->
           </div>
         </section>
     </div>
