--- a/src/scss/portfolio/_main.scss
+++ b/src/scss/portfolio/_main.scss
@@ -37,6 +37,7 @@ body{
   z-index:200;
   max-width:110px;
   font-family:roboto;
+  font-family:"Red Hat Display";
   color:$mainBlue;
   &.darkBackground{
     color:$lightText;
