--- a/src/scss/portfolio/_creations.scss
+++ b/src/scss/portfolio/_creations.scss
@@ -245,10 +245,10 @@
           line-height: 1.2;
         }
         .proj-blurb{
-          font-family: var(--font-serif);
-          font-size: 1.125rem;
-          font-style: italic;
-          line-height: 1.35;
+          font-family: "Red Hat Display";
+          font-size: 1rem;
+          // font-style: italic;
+          line-height: 1.2;
         }
         .proj-btn{
           cursor: pointer;
