--- a/src/scss/portfolio/_about.scss
+++ b/src/scss/portfolio/_about.scss
@@ -36,18 +36,19 @@
     z-index:2;
     .svg-man{
       grid-column: 2/3;
-      background: rgba(255,255,255,0.2);
+      // background: rgba(255,255,255,0.2);
       grid-row: 1/3;
       display: flex;
       justify-self: center;
       padding: 1.5vw;
-      width: 30vmin;
+      width: 40vmin;
       max-width: 250px;
       z-index: 10;
       align-self:center;
       border-radius: 188px;
     }
     .hello{
+      position:relative;
       // font-size: 2.5em;
       padding-top: 50px;
       grid-column: 3/5;
@@ -60,9 +61,18 @@
       justify-content:center;
       color:rgba(0, 13, 78, 0.81);
       color:rgb(217, 168, 91);
-      z-index:2;
-      text-shadow:-49px -40px 0px rgba(217, 168, 91,0.2);
+      z-index:11;
+      // text-shadow:-49px -40px 0px rgba(217, 168, 91,0.2);
       padding-top:50px;
+      &::after{
+        position:absolute;
+        content:"Hello!";
+        top:calc(-49px + 2em - 5vmin);
+        left:-50px;
+        font-size:calc(2rem + 4vmin);
+        color:rgba(217, 168, 91,0.2);
+        z-index:1;
+      }
     }
     .mainBlurb{
       font-size:1.5rem;
@@ -207,6 +217,7 @@ a.contact{
 //   right:0;
 //   transform:translateX(50%) rotate(45deg);
 // }
+
 
 @media (max-width:550px){
 .about-grid{
