--- a/src/scss/portfolio/_menu.scss
+++ b/src/scss/portfolio/_menu.scss
@@ -208,15 +208,16 @@
 
   .modal{
     z-index:10000;
+    font-size:calc(1em + 1.5vmin;
     visibility:visible;
     position:fixed;
-    right:-100%;
-    top:00px;
-    width:50vw;
+    right:100%;
+    top:0px;
+    width:90vw;
     height:100vh;
     transition:all 0.4s ease;
     display:flex;
-    clip-path:circle(100% at 100% 0%);
+    // clip-path:circle(100% at 100% 0%);
     flex-direction:column;
     transition:all 0.4s ease-out;
     ul{
@@ -261,8 +262,8 @@
     color:$darkText;
     right:0;
     top:00px;
-    width:50vw;
-    height:75vh;
+    width:90vw;
+    height:100vh;
     transition:all 0.4s ease-out;
     background: linear-gradient(45deg, #283d50e3, $darkBlue);
     a{
