--- a/src/scss/stocklists/modules/_main.scss
+++ b/src/scss/stocklists/modules/_main.scss
@@ -34,12 +34,12 @@ a {
   position:fixed;
   color:white;
   left: 40px;
-  top:10px;
-  font-size:0.8rem;
+  top:20px;
+  font-size:1rem;
   transition:transform 0.5s;
   z-index:00;
   cursor:default;
-  transform: rotate(270deg) translate(-50%, -6ch);
+  // transform: rotate(0deg) translate(10%, 2ch);
   a{
       text-decoration:none;
       color:inherit;
