--- a/public/views/snake/login.ejs
+++ b/public/views/snake/login.ejs
@@ -21,7 +21,7 @@
         <input type="text" name="username" id="username" value="" required>
       </div>
 
-      <button type="submit" name="button">Submit</button>
+      <button type="submit" name="button">Play</button>
     </form>
     <!-- <a class="register-link" href="/snake/register" >Register</a> -->
   </div>
